Debug: replace legal/index.html with minimal visible page

--- a/legal/index.html
+++ b/legal/index.html
@@ -1,25 +1,11 @@
-
-<!DOCTYPE html>
-<html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>connerly - Connect Creators & Brands</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/heroicons/2.1.3/24/outline/heroicons.min.css" integrity="sha512-MatZPSMyHkL9U0rP2C0s5h9dJ4iOB0pda0wzDyMKt2vS5/L/7yMc1CqN2o9y20vV/pBwU2C3HOU5i+3jQkwApw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.1.1/",
-    "react": "https://esm.sh/react@^19.1.1",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.1/"
-  }
-}
-</script>
-<link rel="stylesheet" href="/index.css">
-</head>
-  <body class="bg-gray-50 text-gray-800">
-    <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
-  </body>
-</html>
+<!doctype html><meta charset="utf-8">
+<title>LEGAL TEST</title>
+<style>html,body{margin:0;height:100%;background:#fffbcc;font:16px/1.6 sans-serif}
+.container{padding:40px}
+h1{margin:0 0 16px}
+</style>
+<div class="container">
+  <h1>LEGAL PAGE TEST</h1>
+  <p>このページが見えれば配信も表示もOKです。</p>
+  <p>（あとで正しい特商法の本文に戻します）</p>
+</div>
